[gd_scene load_steps=2 format=2]

[ext_resource path="res://network2/Network_setup.gd" type="Script" id=1]

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Create_Server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.0
margin_top = 60.0
margin_right = 197.0
margin_bottom = 190.0
text = "Create Server"

[node name="Join_Server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -131.0
margin_top = 228.0
margin_right = 196.0
margin_bottom = 369.0
text = "Join Server"

[node name="Server_IP_address" type="LineEdit" parent="Multiplayer_configure"]
margin_left = 574.0
margin_top = 388.0
margin_right = 861.0
margin_bottom = 444.0
text = "Enter IP Address"
align = 1

[node name="CanvasLayer" type="CanvasLayer" parent="Multiplayer_configure"]

[node name="Device_IP" type="Label" parent="Multiplayer_configure/CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -138.0
align = 1
valign = 1

[connection signal="pressed" from="Multiplayer_configure/Create_Server" to="." method="_on_Create_Server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/Join_Server" to="." method="_on_Join_Server_pressed"]
